# nonce-replacement

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
requirements/: nonce-replacement-spec.md
site/: package.json  tailwind.config.ts
site/app/: layout.tsx  page.tsx  providers.tsx
site/app/vector/: layout.tsx  page.tsx
site/app/vector/[requirement]/: page.tsx
site/components/: CodeBlock.tsx  FitBadge.tsx  RequirementCard.tsx  RequirementNav.tsx  WalletConnectButton.tsx
site/content/: requirements.ts
solutions/vector/: README.md
solutions/vector/rust/: Cargo.toml
solutions/vector/rust/tests/: composability_spl.rs  concurrency_lanes.rs  fee_payer_separation.rs  no_onchain_footprint.rs  parsability.rs  selective_revocation.rs  state_change_tolerance.rs  transaction_integrity.rs
solutions/vector/rust/tests/common/: mod.rs
solutions/vector/ts/: .gitignore  README.md  package.json  tsconfig.json
solutions/vector/ts/lib/: connection.ts  explorer.ts  format.ts  keypair.ts  sendTx.ts  splCompat.ts  vectorProgram.ts
solutions/vector/ts/scripts/: 01-time-window.ts  02-concurrency.ts  03-fee-payer-separation.ts  04-transaction-integrity.ts  05-selective-revocation.ts  06-no-onchain-footprint.ts  07-parsability.ts  08-state-change-tolerance.ts  09-composability.ts
