[package]
name = "vector-nonce-replacement-tests"
version = "0.1.0"
edition = "2021"
publish = false
description = "mollusk-svm tests proving Vector satisfies the nonce-account-replacement spec"

[dev-dependencies]
vector-core = { git = "https://github.com/blueshift-gg/vector", rev = "639444fe138c1f333a7ea27cfed3e79b73aae9b5" }
mollusk-svm = "0.12.0"
mollusk-svm-programs-token = "0.12.0"
solana-account = "3.2"
solana-address = { version = "2.6.0", features = ["curve25519"] }
solana-instruction = "3.4.0"
solana-program-error = "3.0"
solana-program-option = "3.1"
solana-program-pack = "3.1"
spl-token-interface = "2.0"
ed25519-dalek = "=2.1.1"
